# google_drive_test_task

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: manage.py
app/api/: urls.py  utils.py  views.py
app/export_to_google_drive/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
nginx/: nginx.conf
